Mise à jour des controllers + templates pour les habitats avec animaux

--- a/templates/desert/index.html.twig
+++ b/templates/desert/index.html.twig
@@ -40,7 +40,6 @@ content %}
       </div>
     </div>
   </div>
-
   <section class="section-services">
     <div class="service1">
       <article class="description">
@@ -54,10 +53,11 @@ content %}
         <div style="display: none">
           Habitat : Zones désertiques d'Afrique du Nord et du Moyen-Orient
           <br />
-          État de l'animal : {{ animal1.etatAnimal }} <br />
+          État de l'animal : {{ animal1.etat }} <br />
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
-          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
+          Grammage de la nourriture : {{ animal1.grammage }} g<br />
+          Date de passage :
+          {{ animal1.dateDernierPassage ? animal1.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Nick" class="jaime-btn">❤️ J'aime</button>
@@ -89,10 +89,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Déserts d'Afrique du Nord <br />
-          État de l'animal : {{ animal2.etatAnimal }}<br />
-          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
-          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal2.etat }} <br />
+          Nourriture proposée : {{ animal2.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal2.grammage }} g<br />
+          Date de passage :
+          {{ animal2.dateDernierPassage ? animal2.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Feunard" class="jaime-btn">❤️ J'aime</button>
@@ -112,10 +113,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales, plaines et déserts d'Asie <br />
-          État de l'animal : {{ animal3.etatAnimal }}<br />
-          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
-          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal3.etat }} <br />
+          Nourriture proposée : {{ animal3.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal3.grammage }} g<br />
+          Date de passage :
+          {{ animal3.dateDernierPassage ? animal3.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Abo" class="jaime-btn">❤️ J'aime</button>
@@ -147,10 +149,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Déserts d'Afrique du Nord et du Moyen-Orient <br />
-          État de l'animal : {{ animal4.etatAnimal }}<br />
-          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
-          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal4.etat }} <br />
+          Nourriture proposée : {{ animal4.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal4.grammage }} g<br />
+          Date de passage :
+          {{ animal4.dateDernierPassage ? animal4.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Doma" class="jaime-btn">❤️ J'aime</button>
@@ -170,10 +173,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Déserts d'Amérique du Nord <br />
-          État de l'animal : {{ animal5.etatAnimal }}<br />
-          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
-          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal5.etat }} <br />
+          Nourriture proposée : {{ animal5.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal5.grammage }} g<br />
+          Date de passage :
+          {{ animal5.dateDernierPassage ? animal5.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Zed" class="jaime-btn">❤️ J'aime</button>
