--- a/templates/jungle/index.html.twig
+++ b/templates/jungle/index.html.twig
@@ -52,10 +52,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : {{ animal1.etatAnimal }} <br />
+          État de l'animal : {{ animal1.etat }} <br />
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
-          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
+          Grammage de la nourriture : {{ animal1.grammage }} g<br />
+          Date de passage :
+          {{ animal1.dateDernierPassage ? animal1.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Killer" class="jaime-btn">❤️ J'aime</button>
@@ -86,10 +87,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : {{ animal2.etatAnimal }}<br />
-          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
-          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal2.etat }} <br />
+          Nourriture proposée : {{ animal2.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal2.grammage }} g<br />
+          Date de passage :
+          {{ animal2.dateDernierPassage ? animal2.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Garry" class="jaime-btn">❤️ J'aime</button>
@@ -108,10 +110,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Asie <br />
-          État de l'animal : {{ animal3.etatAnimal }}<br />
-          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
-          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal3.etat }} <br />
+          Nourriture proposée : {{ animal3.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal3.grammage }} g<br />
+          Date de passage :
+          {{ animal3.dateDernierPassage ? animal3.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Kaki" class="jaime-btn">❤️ J'aime</button>
@@ -142,10 +145,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : {{ animal4.etatAnimal }}<br />
-          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
-          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal4.etat }} <br />
+          Nourriture proposée : {{ animal4.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal4.grammage }} g<br />
+          Date de passage :
+          {{ animal4.dateDernierPassage ? animal4.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Spin" class="jaime-btn">❤️ J'aime</button>
@@ -164,10 +168,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales et mangroves d'Asie du Sud <br />
-          État de l'animal : {{ animal5.etatAnimal }}<br />
-          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
-          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal5.etat }} <br />
+          Nourriture proposée : {{ animal5.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal5.grammage }} g<br />
+          Date de passage :
+          {{ animal5.dateDernierPassage ? animal5.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Rex" class="jaime-btn">❤️ J'aime</button>
