--- a/templates/marais/index.html.twig
+++ b/templates/marais/index.html.twig
@@ -54,10 +54,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Marais et cours d'eau <br />
-          État de l'animal : {{ animal1.etatAnimal }} <br />
+          État de l'animal : {{ animal1.etat }} <br />
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
-          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
+          Grammage de la nourriture : {{ animal1.grammage }} g<br />
+          Date de passage :
+          {{ animal1.dateDernierPassage ? animal1.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Crac" class="jaime-btn">❤️ J'aime</button>
@@ -89,11 +90,13 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Marais et cours d'eau <br />
-          État de l'animal : {{ animal2.etatAnimal }}<br />
-          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
-          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal2.etat }} <br />
+          Nourriture proposée : {{ animal2.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal2.grammage }} g<br />
+          Date de passage :
+          {{ animal2.dateDernierPassage ? animal2.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
+
         <div class="like-button-container">
           <button id="increment-godzilla" class="jaime-btn">❤️ J'aime</button>
         </div>
@@ -112,10 +115,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Marais et cours d'eau <br />
-          État de l'animal : {{ animal3.etatAnimal }}<br />
-          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
-          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal3.etat }} <br />
+          Nourriture proposée : {{ animal3.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal3.grammage }} g<br />
+          Date de passage :
+          {{ animal3.dateDernierPassage ? animal3.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Pumba" class="jaime-btn">❤️ J'aime</button>
@@ -147,10 +151,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Marais et cours d'eau <br />
-          État de l'animal : {{ animal4.etatAnimal }}<br />
-          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
-          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal4.etat }} <br />
+          Nourriture proposée : {{ animal4.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal4.grammage }} g<br />
+          Date de passage :
+          {{ animal4.dateDernierPassage ? animal4.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Annie" class="jaime-btn">❤️ J'aime</button>
@@ -170,10 +175,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Marais et cours d'eau <br />
-          État de l'animal : {{ animal5.etatAnimal }}<br />
-          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
-          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal5.etat }} <br />
+          Nourriture proposée : {{ animal5.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal5.grammage }} g<br />
+          Date de passage :
+          {{ animal5.dateDernierPassage ? animal5.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Shelly" class="jaime-btn">❤️ J'aime</button>
