--- a/templates/savane/index.html.twig
+++ b/templates/savane/index.html.twig
@@ -53,10 +53,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Savane <br />
-          État de l'animal : {{ animal1.etatAnimal }} <br />
+          État de l'animal : {{ animal1.etat }} <br />
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
-          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
+          Grammage de la nourriture : {{ animal1.grammage }} g<br />
+          Date de passage :
+          {{ animal1.dateDernierPassage ? animal1.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Tembo" class="jaime-btn">❤️ J'aime</button>
@@ -88,10 +89,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : {{ animal2.etatAnimal }}<br />
-          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
-          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal2.etat }} <br />
+          Nourriture proposée : {{ animal2.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal2.grammage }} g<br />
+          Date de passage :
+          {{ animal2.dateDernierPassage ? animal2.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <p>
           Prénom : {{ animal3.prenom }} <br />
@@ -102,10 +104,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Savane <br />
-          État de l'animal : {{ animal3.etatAnimal }}<br />
-          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
-          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal3.etat }} <br />
+          Nourriture proposée : {{ animal3.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal3.grammage }} g<br />
+          Date de passage :
+          {{ animal3.dateDernierPassage ? animal3.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-JasiriKito" class="jaime-btn">❤️ J'aime</button>
@@ -125,10 +128,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Savane <br />
-          État de l'animal : {{ animal4.etatAnimal }}<br />
-          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
-          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal4.etat }} <br />
+          Nourriture proposée : {{ animal4.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal4.grammage }} g<br />
+          Date de passage :
+          {{ animal4.dateDernierPassage ? animal4.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Raja" class="jaime-btn">❤️ J'aime</button>
@@ -160,10 +164,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Savane <br />
-          État de l'animal : {{ animal5.etatAnimal }}<br />
-          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
-          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal5.etat }} <br />
+          Nourriture proposée : {{ animal5.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal5.grammage }} g<br />
+          Date de passage :
+          {{ animal5.dateDernierPassage ? animal5.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Simba" class="jaime-btn">❤️ J'aime</button>
@@ -183,10 +188,11 @@ content %}
         </p>
         <div id="etat-animal" class="etat-animal-rhino" style="display: none">
           Habitat : Savane <br />
-          État de l'animal : {{ animal6.etatAnimal }}<br />
-          Nourriture proposée : {{ animal6.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal6.grammagenourriture }} <br />
-          Date de passage : {{ animal6.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal6.etat }} <br />
+          Nourriture proposée : {{ animal6.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal6.grammage }} <br />
+          Date de passage :
+          {{ animal6.dateDernierPassage ? animal6.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-rhinoFamily" class="jaime-btn">
@@ -220,10 +226,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Savane <br />
-          État de l'animal : {{ animal7.etatAnimal }}<br />
-          Nourriture proposée : {{ animal7.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal7.grammagenourriture }} <br />
-          Date de passage : {{ animal7.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal7.etat }} <br />
+          Nourriture proposée : {{ animal7.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal7.grammage }} <br />
+          Date de passage :
+          {{ animal7.dateDernierPassage ? animal7.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Zara" class="jaime-btn">❤️ J'aime</button>
