--- a/templates/mountain/index.html.twig
+++ b/templates/mountain/index.html.twig
@@ -53,10 +53,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Régions montagneuses et falaises escarpées <br />
-          État de l'animal : {{ animal1.etatAnimal }} <br />
+          État de l'animal : {{ animal1.etat }} <br />
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
-          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
+          Grammage de la nourriture : {{ animal1.grammage }} g<br />
+          Date de passage :
+          {{ animal1.dateDernierPassage ? animal1.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Scott" class="jaime-btn">❤️ J'aime</button>
@@ -88,10 +89,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Montagnes rocailleuses et pentes escarpées <br />
-          État de l'animal : {{ animal2.etatAnimal }}<br />
-          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
-          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal2.etat }} <br />
+          Nourriture proposée : {{ animal2.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal2.grammage }} g<br />
+          Date de passage :
+          {{ animal2.dateDernierPassage ? animal2.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-CriCri" class="jaime-btn">❤️ J'aime</button>
@@ -111,10 +113,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Montagnes rocailleuses et pentes escarpées <br />
-          État de l'animal : {{ animal3.etatAnimal }}<br />
-          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
-          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
+          tat de l'animal : {{ animal3.etat }} <br />
+          Nourriture proposée : {{ animal3.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal3.grammage }} g<br />
+          Date de passage :
+          {{ animal3.dateDernierPassage ? animal3.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Doug" class="jaime-btn">❤️ J'aime</button>
@@ -146,10 +149,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Forêts et montagnes boisées <br />
-          État de l'animal : {{ animal4.etatAnimal }}<br />
-          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
-          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal4.etat }} <br />
+          Nourriture proposée : {{ animal4.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal4.grammage }} g<br />
+          Date de passage :
+          {{ animal4.dateDernierPassage ? animal4.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Wolf" class="jaime-btn">❤️ J'aime</button>
@@ -169,10 +173,11 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Montagnes rocheuses et prairies alpines <br />
-          État de l'animal : {{ animal5.etatAnimal }}<br />
-          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
-          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
-          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
+          État de l'animal : {{ animal5.etat }} <br />
+          Nourriture proposée : {{ animal5.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal5.grammage }} g<br />
+          Date de passage :
+          {{ animal5.dateDernierPassage ? animal5.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Spog" class="jaime-btn">❤️ J'aime</button>
