--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -3,7 +3,7 @@ content %}
   <div class="background-section">
   <div class="container service-container">
     <div class="row">
-      <nav class="col-md-3 service-nav"> 
+      <nav class="col-md-3 service-nav" id="ticket"> 
         <ul>
           <li><a href="#ticket">Billeterie</a></li>
           <li><a href="#time">Accès & Horaires</a></li>
@@ -19,8 +19,8 @@ content %}
     </div>
   </div>
 <section class="section-services">
-      <div class="service1" id="ticket">      
-        <article class="description">
+      <div class="service1">      
+        <article class="description" id="time">
           <h2 class="serv-title">Billetterie</h2>
           <p>
         Que vous veniez en famille, entre amis ou en solo, nous sommes prêts à vous accueillir pour une journée mémorable parmi les merveilles de la nature. Nos tarifs sont simples et accessibles à tous : l'entrée est gratuite pour les explorateurs de moins de 4 ans, 10 euros pour les enfants de 4 à 11 ans, et 15 euros pour les visiteurs de 11 ans et plus. Achetez vos billets directement sur place et préparez-vous à vivre des aventures inoubliables au zoo !
@@ -34,7 +34,7 @@ content %}
         </article>
          </div>
          <hr class="service-divider">
-         <div class="service2" id="time">
+         <div class="service2">
         <article class="service">
           <img
             src="{{ asset('assets/images/services/zoo.jpg') }}"
