connexion interface pour admin employe veterinaire

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,4 +1,5 @@
-{% extends 'user_base.html.twig' %} {% block content %}
+{% extends 'user_base.html.twig' %}{% block title %}Interface Employé{% endblock
+%} {% block content %}
 <header class="bg-light py-3 text-center">
   <h1>Bienvenue, {{ app.user.email }}!</h1>
   <p>Vous êtes connecté en tant qu'<strong>Administrateur</strong>.</p>
